--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.1",
     "react-router-dom": "^7.6.1",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "zod": "^3.25.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
